2002-03-13  Michael Meeks  <michael@ximian.com>

	* libgnome/gnome-program.c
	(find_accessibility_module): use gtk-2.0/modules
	(accessibility_invoke): only do a11y if we're a GUI
	app even if it's enabled, and don't do it for bonobo
	components - we go via their frames.

2002-03-13  Michael Meeks  <michael@ximian.com>

	* monikers/bonobo-config-bag.c
	(impl_Bonobo_PropertyBag_getDefault),
	(impl_Bonobo_PropertyBag_getValue),
	(impl_Bonobo_PropertyBag_getType): fix warnings.

	* monikers/bonobo-moniker-config.c: ditto.

	* libgnome/gnome-program.c
	(find_accessibility_module): impl.
	(gnome_program_postinit): add accessibility setup / init.a
	(accessibility_init): grab any interesting
	looking modules out of the module list.
	(accessibility_invoke_module): impl.
	(accessibility_invoke): impl.

2002-03-12  Laszlo Peter  <laca@ireland.sun.com>

	* libgnome/gnome-exec.c (gnome_prepend_terminal_to_vector):
	remove a g_message that causes seg. fault on Solaris.

2002-03-09  Michael Meeks  <michael@ximian.com>

	* schemas/desktop_gnome_interface.schemas: set
	toolbar_style to 'both' by default

2002-03-06  Paolo Maggi  <maggi@athena.polito.it>

	* libgnome/gnome-url.c (gnome_url_default_handler):
	use gnome-help as handler for ghelp: info: man: uris
	and mozilla as default url handler
	(gnome_url_show): fix mem leak, use the rigth handler
	also the first time it runs

2002-03-06  Christian Meyer  <chrisime@gnome.org>

	* configure.in: Added 'de' to ALL_LINGUAS.

2002-03-05  Paolo Maggi  <maggi@athena.polito.it>

	* libgnome/gnome-program.c (gnome_program_locate_file):
	search files in {prefix}/share/gnome/help/{app_id}/
	when using GNOME_FILE_DOMAIN_APP_HELP domain

	* libgnome/gnome-help.c (locate_help_file): removed extra
	"/" between path and lang

2002-03-05  Eric Baudais  <baudais@okstate.edu>

	* help-converters/docbook/gnome-customization/gnome-custom.xsl:
	Sync the general customizations with gnome-docu/gdp/xsl.