@@ -1,6 +1,12 @@
 2002-03-13  Michael Meeks  <michael@ximian.com>
 
 	* libgnome/gnome-program.c
+	(accessibility_invoke): move bonobo bits to atk-bridge
+	so the GTK_MODULES approach also works well, sigh.
+
+2002-03-13  Michael Meeks  <michael@ximian.com>
+
+	* libgnome/gnome-program.c
 	(find_accessibility_module): use gtk-2.0/modules
 	(accessibility_invoke): only do a11y if we're a GUI
 	app even if it's enabled, and don't do it for bonobo
